--- a/code/Tvarus/package.json
+++ b/code/Tvarus/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "expo": "~49.0.15",
+    "expo": "^49.0.20",
     "expo-status-bar": "~1.6.0",
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
